that shift of state has solved my problems, now got the content moving in response to active menu. Now just need to calc proper padding

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -135,6 +135,9 @@ nav {
 
     .main-container {
         padding-top: 108px;
+        &.active{
+            padding-top: 308px; 
+        }
     }
 
 
